changed backend resolved some errors