@@ -31,7 +31,38 @@ public class UserController {
     private final IdentityService identity;
     private final UserRepository users;
     private final AuditLogRepository audit;
-    public UserController(IdentityService identity, UserRepository users, AuditLogRepository audit) { this.identity = identity; this.users = users; this.audit = audit; }
+    private final com.notifyhub.auth.RoleRepository roles;
+    private final com.notifyhub.rbac.RbacAuthorizationService rbac;
+    public UserController(IdentityService identity, UserRepository users, AuditLogRepository audit,
+                          com.notifyhub.auth.RoleRepository roles, com.notifyhub.rbac.RbacAuthorizationService rbac) {
+        this.identity = identity; this.users = users; this.audit = audit; this.roles = roles; this.rbac = rbac;
+    }
+
+    private static boolean isSuperAdminAccount(com.notifyhub.auth.User u) {
+        return u.getRole() == Role.SUPER_ADMIN
+                || "SUPER_ADMIN".equalsIgnoreCase(u.getEffectiveRoleName())
+                || (u.getRoleEntity() != null && u.getRoleEntity().isSuperadmin());
+    }
+
+    /** A plain Admin must not be able to edit, disable or re-password a Super Admin, or grant that role. */
+    private void guardSuperAdminChange(Authentication actor, UUID targetPublicId, String requestedRole, Long requestedRoleId) {
+        com.notifyhub.auth.User caller = users.findByUsername(actor.getName()).or(() -> users.findByEmailIgnoreCase(actor.getName()))
+                .orElseThrow(() -> new org.springframework.web.server.ResponseStatusException(HttpStatus.UNAUTHORIZED, "Authentication required."));
+        if (isSuperAdminAccount(caller) || rbac.isSuperAdmin(caller)) return;
+        boolean touchesSuperAdmin = targetPublicId != null
+                && users.findByPublicId(targetPublicId).map(UserController::isSuperAdminAccount).orElse(false);
+        if (!touchesSuperAdmin && requestedRoleId != null) {
+            touchesSuperAdmin = roles.findById(requestedRoleId)
+                    .map(r -> r.isSuperadmin() || "SUPER_ADMIN".equalsIgnoreCase(r.getName())).orElse(false);
+        }
+        if (!touchesSuperAdmin && requestedRole != null && !requestedRole.isBlank()) {
+            touchesSuperAdmin = "SUPER_ADMIN".equalsIgnoreCase(requestedRole.trim())
+                    || roles.findByNameIgnoreCase(requestedRole.trim()).map(r -> r.isSuperadmin()).orElse(false);
+        }
+        if (touchesSuperAdmin) {
+            throw new org.springframework.web.server.ResponseStatusException(HttpStatus.FORBIDDEN, "Only a Super Admin can manage Super Admin accounts.");
+        }
+    }
 
     @GetMapping("/users/me")
     public ResponseEntity<ApiResponse<IdentityService.CurrentUser>> current(Authentication authentication) {
@@ -47,20 +78,26 @@ public class UserController {
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "50") int size
     ) {
-        Page<IdentityService.UserListItem> paged = identity.listUsers(search, role, departmentId, status, PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdAt")));
+        Page<IdentityService.UserListItem> paged = identity.listUsers(search, role, departmentId, status, PageRequest.of(Math.max(page, 0), Math.min(Math.max(size, 1), 200), Sort.by(Sort.Direction.DESC, "createdAt")));
         return ResponseEntity.ok(ApiResponse.ok(PageResponse.from(paged)));
     }
 
     @GetMapping("/users")
     public ResponseEntity<ApiResponse<PageResponse<IdentityService.UserListItem>>> queryUsers(
+            Authentication authentication,
             @RequestParam MultiValueMap<String, String> query,
             @RequestParam(defaultValue = "0") int page, @RequestParam(defaultValue = "50") int size) {
+        String callerRole = users.findByUsername(authentication.getName())
+                .or(() -> users.findByEmailIgnoreCase(authentication.getName()))
+                .map(com.notifyhub.auth.User::getEffectiveRoleName).orElse("STUDENT");
+        if ("STUDENT".equalsIgnoreCase(callerRole))
+            throw new org.springframework.web.server.ResponseStatusException(HttpStatus.FORBIDDEN, "Access denied.");
         Map<String, String> filters = new LinkedHashMap<>();
         query.forEach((key, values) -> {
             if (key.startsWith("filter[") && key.endsWith("]") && !values.isEmpty())
-                filters.put(key.substring(7, key.length() - 1), values.getFirst());
+                filters.put(key.substring(7, key.length() - 1), values.get(0));
         });
-        Page<IdentityService.UserListItem> result = identity.listUsers(filters, PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdAt")));
+        Page<IdentityService.UserListItem> result = identity.listUsers(filters, PageRequest.of(Math.max(page, 0), Math.min(Math.max(size, 1), 200), Sort.by(Sort.Direction.DESC, "createdAt")));
         return ResponseEntity.ok(ApiResponse.ok(PageResponse.from(result)));
     }
 
@@ -82,7 +119,7 @@ public class UserController {
                 req.status(),
                 req.mustChangePassword()
         );
-        var created = identity.createUser(cmd); audit(actor, "USER_CREATE", created.publicId()); return ResponseEntity.status(HttpStatus.CREATED).body(ApiResponse.created(created));
+        guardSuperAdminChange(actor, null, req.role(), req.roleId()); var created = identity.createUser(cmd); audit(actor, "USER_CREATE", created.publicId()); return ResponseEntity.status(HttpStatus.CREATED).body(ApiResponse.created(created));
     }
 
     @PutMapping("/admin/users/{publicId}")
@@ -98,11 +135,12 @@ public class UserController {
                 req.status(),
                 req.password()
         );
-        var updated = identity.updateUser(publicId, cmd); audit(actor, "USER_EDIT", publicId); return ResponseEntity.ok(ApiResponse.ok(updated));
+        guardSuperAdminChange(actor, publicId, req.role(), req.roleId()); var updated = identity.updateUser(publicId, cmd); audit(actor, "USER_EDIT", publicId); return ResponseEntity.ok(ApiResponse.ok(updated));
     }
 
     @DeleteMapping("/admin/users/{publicId}")
     public ResponseEntity<ApiResponse<Void>> removeUser(Authentication actor, @PathVariable UUID publicId) {
+        guardSuperAdminChange(actor, publicId, null, null);
         identity.removeUser(publicId);
         audit(actor, "USER_DELETE", publicId);
         return ResponseEntity.ok(ApiResponse.message("User account removed/deactivated."));
@@ -110,6 +148,7 @@ public class UserController {
 
     @PatchMapping("/admin/users/{publicId}/status")
     public ResponseEntity<ApiResponse<Void>> status(Authentication actor, @PathVariable UUID publicId, @Valid @RequestBody StatusRequest request) {
+        guardSuperAdminChange(actor, publicId, null, null);
         identity.setStatus(publicId, request.status());
         audit(actor, "USER_EDIT", publicId);
         return ResponseEntity.ok(ApiResponse.message("Account status updated."));
@@ -117,6 +156,7 @@ public class UserController {
 
     @PatchMapping("/admin/users/{publicId}/role")
     public ResponseEntity<ApiResponse<Void>> role(Authentication actor, @PathVariable UUID publicId, @Valid @RequestBody RoleRequest request) {
+        guardSuperAdminChange(actor, publicId, request.role().name(), null);
         identity.setRole(publicId, request.role());
         audit(actor, "USER_EDIT", publicId);
         return ResponseEntity.ok(ApiResponse.message("Role updated."));
